--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,101 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
+
 	<meta charset="utf-8">
-	<title>Learn C with me {% if page.title %}- {{ page.title }} {% endif %}</title>
+
+	<title>Learn C With Me {% if page.title %}- {{ page.title }} {% endif %}</title>
+
+    <meta property="og:url" content="https://www.facebook.com/learncwithme" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Learn C With Me" />
+    <meta property="og:description" content="A blog for C tutorials" />
+    <!-- <meta property="og:image" content="http://www.your-domain.com/path/image.jpg" /> -->
+
+    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon" />
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Paytone+One" rel="stylesheet">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
+
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/main.js"></script>
+
 </head>
 <body>
+    {% include fb_like_share.html %}
 	<div class="container-fluid">
-		<div class="page-header">
-			<h3 class="brand"><a class="navbar-brand brand-link" href="{{ site.baseurl }}/index.html">ABC of C</a></h3>
-		</div>
+        <!-- Navbar -->
+        <nav class="navbar navbar-default navbar-fixed-top site-navbar">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand brand" href="{{ site.baseurl }}/index.html">Learn C With Me</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{{ site.baseurl }}/index.html"> Home </a></li>
+                        <li><a href="#"> My Website </a></li>
+                        <li><a href="#"> Archive </a></li>
+                        <li><a href="#"> Practice </a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
 		{{ content }}
+
+        <footer class="footer" id="contact">
+            <div class="container">
+                <div class="row row1">
+                    <div class="col-xs-4 left">
+                        <p> Did you like the blog? Like my facebook page to get regular updates <p>
+                        <p><a href="https://www.facebook.com/learncwithme"> Learn C With Me </a></p>
+                        <div class="fb-like" data-href="https://www.facebook.com/learncwithme" data-width="200" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
+                    </div>
+                    <div class="col-xs-4 center">
+                        <h4>Connect</h4>
+    					<ul>
+                            <li>
+                                <a class="btn btn-social-icon" href="https://www.facebook.com/friendyankan"><span class="fa fa-facebook-square"></span> Facebook </a>
+                            </li>
+                            <li>
+                                <a class="btn btn-social-icon" href="https://plus.google.com/u/0/101331497280009937677"><span class="fa fa-google-plus-square"></span> Google+ </a>
+                            </li>
+                            <li>
+                                <a class="btn btn-social-icon" href="https://www.github.com/ankan17"><span class="fa fa-github"></span> Github </a>
+                            </li>
+                            <!-- <li>
+                                <a class="btn btn-social-icon"><span class="fa fa-pinterest"></span> Pinterest </a>
+                            </li> -->
+                            <li>
+                                <a class="btn btn-social-icon" href="https://www.quora.com/profile/Ankan-Poddar"><span class="fa fa-quora"></span> Quora </a>
+                            </li>
+    					</ul>
+                    </div>
+                    <div class="col-xs-4 right">
+                        <p> Have any query, suggestion, complaint or complement? Feel free to drop a few words at </p>
+                        <a> friendyankan@gmail.com </a>
+                        <p> Copyright &copy; 2017 by Ankan Poddar<br />
+                            All Rights Reserved </p>
+                    </div>
+                </div>
+                <div class="row row2">
+                    <div class="col-md-12">
+                        <p class="text-center"> &copy; 2017, {} Made with <span class="glyphicon glyphicon-heart"></span> by Ankan Poddar </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 	</div>
 </body>
 </html>
