--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,32 +1,37 @@
 ---
 layout: default
+comments: true
 ---
 
-<div class="post-content">
-	<h1>{{ page.title }}</h1>
-	<h3>{{ page.meta }}</h3>
+<div class="container post-content">
+    <div class="row">
+	    <h1>{{ page.title }}</h1>
+    	<h2>{{ page.meta }}</h2>
+    	<p class="content-date"><strong>{{ page.date | date: "%B %d, %Y" }}</strong></p>
+    	{{ content }}
+    </div>
+</div>
 
-	{{ content }}
+<div class="container navigation">
+    <div class="row">
 
-	<div class="navigation row">
+    	{% if page.previous.url %}
+      	<div class="col-xs-4"><a class="btn btn-danger btn-lg" href="{{ site.baseurl }}{{ page.previous.url }}">
+    	  	<span class="glyphicon glyphicon glyphicon-menu-left" aria-hidden="true"></span> Previous: {{ page.previous.title }}
+        </a></div>
 
-		{% if page.previous_post %}
-	  	<div class="previous col-md-4"><a href="">
-		  	<span class="glyphicon glyphicon glyphicon-menu-left" aria-hidden="true"></span> Previous: {{ page.previous_post }}
-	    </a></div>
+        <div class="col-xs-4"><a class="btn btn-primary btn-lg" href="{{ page.link }}"> Download as PDF </a></div>
 
-	  	<div class="current  col-md-4"><a href="{{ page.link }}"> Download as PDF: {{ page.title }} </a></div>
+      	{% else %}
+        <div class="col-xs-4 col-xs-offset-4"><a class="btn btn-primary btn-lg" href="{{ page.link }}"> Download as PDF </a></div>
 
-	  	{% else %}
-		<div class="current  col-md-4 col-md-offset-4"><a href="{{ page.link }}"> Download as PDF: {{ page.title }} </a></div>
+        {% endif %}
 
-	    {% endif %}
+        {% if page.next.url %}
+        <div class="col-xs-4"><a class="btn btn-success btn-lg" href="{{ site.baseurl }}{{ page.next.url }}">
+      		Next: {{ page.next.title }} <span class="glyphicon glyphicon glyphicon-menu-right align-right" aria-hidden="true"></span>
+        </a></div>
+        {% endif %}
 
-	    {% if page.next_post %}
-	    <div class="next col-md-4"><a href="">
-	  		Next: {{ page.next_post }} <span class="glyphicon glyphicon glyphicon-menu-right align-right" aria-hidden="true"></span>
-	    </a></div>
-	    {% endif %}
-	    
-	</div>
+    </div>
 </div>
