Added the third post
Added the third post and updated the page-header to be more responsive
in mobile viewing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
-	<meta charset="utf-8">
+    <meta charset="utf-8" />
+	<meta http-equiv="x-ua-compatible" content="ie=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<title>Learn C With Me {% if page.title %}- {{ page.title }} {% endif %}</title>
 
@@ -60,7 +62,7 @@
                     <div class="col-xs-4 left">
                         <p> Did you like the blog? Like my facebook page to get regular updates <p>
                         <p><a href="https://www.facebook.com/learncwithme"> Learn C With Me </a></p>
-                        <div class="fb-like" data-href="https://www.facebook.com/learncwithme" data-width="200" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
+                        <div class="fb-like" data-href="https://www.facebook.com/learncwithme/" data-width="200" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
                     </div>
                     <div class="col-xs-4 center">
                         <h4>Connect</h4>
