--- a/css/main.css
+++ b/css/main.css
@@ -217,9 +217,10 @@
     /* Header */
 
     header {
-        background: url("{{ site.baseurl }}/images/hero.jpg");
+        position: relative;
+        background: url("{{ site.baseurl }}/images/bg.jpg");
         background-position: center center;
-        background-size: auto;
+        background-size: cover;
         margin: 0;
         padding: 0;
         position: relative;
@@ -229,6 +230,65 @@
     header .container-fluid {
         max-width: 100%;
     }
+
+    header .outer {
+        position: absolute;
+        top: 0;
+        left: 40%;
+        height: 100%;
+    }
+
+    header .inner {
+        position: absolute;
+        top: 50%;
+        left: 41%;
+        height: 50%;
+    }
+
+    header .text {
+        position: absolute;
+        top: 50%;
+        height: 7%;
+        left: 52%;
+    }
+
+    @media(max-width: 1032px) {
+        header .text {
+            left: 55%;
+        }
+    }
+
+    @media(max-width: 738px) {
+        header .text {
+            left: 60%;
+        }
+    }
+
+    @media(max-width: 512px) {
+        header .text {
+            left: 66%;
+        }
+    }
+
+    /*header .outer {
+        background-color: pink;
+        background-image: url({{ site.baseurl }}/images/outer.png);
+        background-position: center center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 100%;
+        margin: 0 auto;
+        z-index: 100;
+    }
+
+    header .inner {
+        background-image: url({{ site.baseurl }}/images/inner.png);
+        background-color: blue;
+        background-position: center center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 80%;
+    }*/
 
     header .move-down {
         position: absolute;
@@ -481,7 +541,7 @@
     	margin-bottom: 20px;
     }
 
-    .post-content p, ol, ul {
+    .post-content p, li, td {
     	text-align: justify;
     	font-family: Raleway;
     	font-size: 1.2em;
@@ -492,7 +552,26 @@
     }
 
     .post-content li {
-    	margin: 4px 0;
+    	margin: 8px 0;
+    }
+
+    pre {
+        margin: 20px;
+        padding: 0;
+    }
+
+    pre code {
+        font-size: 16px;
+        line-height: 25px;
+    }
+
+    ol ul li, ul ol li {
+        font-family: Raleway;
+        font-size: 1em;
+    }
+
+    .post-content .col-xs-12 {
+        margin-bottom: 15px;
     }
 
     .content-date {
@@ -517,38 +596,61 @@
 	text-decoration: none;
 }*/
 
-/* -----------------------------------Specific to Post 1----------------------------------- */
+/* -----------------------------------Specific to Posts----------------------------------- */
 
-.meme-img1 {
-position: absolute;
-top: 0;
-margin-top: 9px;
-}
+    /* ---------------------------------Post 1--------------------------------- */
 
-.reason-list {
-padding: 15px;
-}
-
-pre {
-    margin: 20px;
-    padding: 0;
-}
-
-pre code {
-    font-size: 17px;
-    line-height: 25px;
-}
-
-.post-content .col-xs-12 {
-    margin-bottom: 15px;
-}
-
-
-@media (max-width: 1200px) and (max-height: 550px) {
-    .page-header {
-        background-size: cover;
+    .reason-list {
+        padding: 15px;
     }
-}
+
+    /* ---------------------------------Post 3--------------------------------- */
+
+    .character-set {
+        margin: 30px auto;
+        width: 50%;
+    }
+
+    .character-set td {
+        padding: 10px;
+        text-align: center;
+    }
+
+    .character-set tr:nth-child(1) {
+        background-color: #e0eeff;
+    }
+
+    .character-set tr:last-child {
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+    .character-set tr td:nth-child(1) {
+        width: 125px;
+        font-size: 19px;
+        background-color: #e0eeff;
+        border-right: 1px solid rgba(50, 0, 0, 0.3);
+    }
+
+    .keywords {
+        margin: 30px auto;
+        width: 70%;
+        font-size: 0.8em;
+    }
+
+    .keywords tr td {
+        text-align: center;
+        padding: 5px;
+    }
+
+    .keywords tr td:nth-child(1) {
+        background-color: #e0eeff;
+        border-right: 1px solid rgba(50, 0, 0, 0.3);
+    }
+
+    .keywords tr:nth-child(1) td {
+        background-color: #e0eeff;
+        border-bottom: 1px solid rgba(100, 0, 0, 0.2);
+    }
 
 @media (max-width: 768px) {
     .page-header .container-fluid {
