--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,13 +59,13 @@
         <footer class="footer" id="contact">
             <div class="container">
                 <div class="row row1">
-                    <div class="col-xs-4 left">
+                    <div class="col-xs-12 col-sm-4 left">
                         <p> Did you like the blog? Like my facebook page to get regular updates <p>
                         <p><a href="https://www.facebook.com/learncwithme"> Learn C With Me </a></p>
                         <div class="fb-like" data-href="https://www.facebook.com/learncwithme/" data-width="200" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
                     </div>
-                    <div class="col-xs-4 center">
-                        <h4>Connect</h4>
+                    <div class="col-xs-12 col-sm-4 center">
+                        <h4>Connect with Me</h4>
     					<ul>
                             <li>
                                 <a class="btn btn-social-icon" href="https://www.facebook.com/friendyankan"><span class="fa fa-facebook-square"></span> Facebook </a>
@@ -84,7 +84,7 @@
                             </li>
     					</ul>
                     </div>
-                    <div class="col-xs-4 right">
+                    <div class="col-xs-12 col-sm-4 right">
                         <p> Have any query, suggestion, complaint or complement? Feel free to drop a few words at </p>
                         <a> friendyankan@gmail.com </a>
                         <p> Copyright &copy; 2017 by Ankan Poddar<br />
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="row row2">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <p class="text-center"> &copy; 2017, {} Made with <span class="glyphicon glyphicon-heart"></span> by Ankan Poddar </p>
                     </div>
                 </div>
