Added facebook comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Learn C With Me" />
     <meta property="og:description" content="A blog for C tutorials" />
+    <meta property="fb:admins" content="100001993370797"/>
     <!-- <meta property="og:image" content="http://www.your-domain.com/path/image.jpg" /> -->
 
     <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon" />
@@ -29,7 +30,7 @@
 
 </head>
 <body>
-    {% include fb_like_share.html %}
+    {% include facebook_sdk.html %}
 	<div class="container-fluid">
         <!-- Navbar -->
         <nav class="navbar navbar-default navbar-fixed-top site-navbar">
