--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@
     }
 
     #recent .post .meta {
-    	font-size: 0.9em;
+    	font-size: 0.85em;
     }
 
     #recent .post .desc {
@@ -518,6 +518,13 @@
     	font-size: 1.7em;
     	margin-bottom: 20px;
         margin-left: 10px;
+    }
+
+    .post-content h5 {
+    	font-family: Raleway;
+    	font-size: 1.2em;
+    	margin-bottom: 20px;
+        font-weight: 800;
     }
 
     .post-content p, li, td {
@@ -584,6 +591,10 @@
 
     .navigation a:nth-child(2) {
         margin: auto 5% auto 5%;
+    }
+
+    .indented {
+        margin: 15px auto 15px 100px;
     }
 
 /* -----------------------------------Specific to Posts----------------------------------- */
@@ -670,13 +681,65 @@
         margin: 20px auto;
     }
 
-    .indented {
-        margin: 15px auto 15px 100px;
+    /* ---------------------------------Post 5--------------------------------- */
+
+    #image-5-1, #image-5-2, #image-5-3, #image-5-4 {
+        margin: 20px auto 10px auto;
+    }
+
+    #image-5-5 {
+        width: 80%;
+        margin: 20px auto -10px auto;
+    }
+
+    #image-5-6 {
+        width: 80%;
+        margin: 20px auto 10px auto;
+    }
+
+    #modifiers {
+        margin: 30px auto;
+        width: 60%;
+        border: 2px solid #333;
+    }
+
+    #modifiers tr td {
+        text-align: center;
+        padding: 5px;
+        font-size: 15px;
+        border-right: 1px solid #333;
+    }
+
+    #modifiers tr:nth-child(1) td {
+        font-size: 16px;
+        padding: 5px;
+        background-color: #cea1ed;
+        font-weight: 800;
+        border-bottom: 1px solid #333;
+    }
+
+    #modifiers tr:nth-child(1) td:nth-child(1) {
+        border-bottom: 1px solid #333;
+    }
+
+    #modifiers tr:nth-child(2) td {
+        font-size: 16px;
+        padding: 5px;
+        background-color: #cea1ed;
+        border-bottom: 2px solid #333;
     }
 
 /* -----------------------------------Media Queries----------------------------------- */
 
 @media only screen and (max-width: 768px) {
+
+    #about-me {
+        padding-top: 0;
+    }
+
+    #about-me h1 {
+        margin-top: 5px;
+    }
 
     .footer .col-xs-12 {
         margin-top: 30px;
