--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,11 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<link href="https://fonts.googleapis.com/css?family=Paytone+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
@@ -42,13 +46,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand brand" href="{{ site.baseurl }}/index.html">Learn C With Me</a>
+                    <a class="navbar-brand brand" href="{{ site.baseurl }}">Learn C With Me</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{{ site.baseurl }}/index.html"> Home </a></li>
+                        <li><a href="{{ site.baseurl }}"> Home </a></li>
                         <li><a href="#"> My Website </a></li>
-                        <li><a href="#"> Archive </a></li>
+                        <li><a href="{{ site.baseurl }}/archive"> Archive </a></li>
                         <li><a href="#"> Practice </a></li>
                     </ul>
                 </div>
